# mimo-v2-flash-with-claude-inital-message

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  PKGBUILD  README.md  TODO.md  build.sh  build.zsh
.agent/: TASKS.md  USER_MESSAGE.md
.github/workflows/: opencode.yml
config/: default.toml
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  codebase_index.md  plan_fix_ghosting.md  suno_api_reference.md
docs/user-messages/: INITAL_PROMPT.md
projectm-qt-visualizer/: .gitignore  CMakeLists.txt  LICENSE  README.md
projectm-qt-visualizer/.agent/: AGENT_PRIME_DIRECTIVE.md  CURRENT_STATE.md  KNOWN_ISSUES.md  NEXT_TASKS.md  QUICK_REFERENCE.md  SESSION_HANDOFF.md
projectm-qt-visualizer/.cache/clangd/index/: Logger.cpp.7C57DD4DD9536A43.idx  Logger.hpp.7628FAFC51C14962.idx  MainWindow.cpp.EC50E8C5D20F9198.idx  MainWindow.hpp.AD3CD597822E124C.idx  ProjectMWrapper.cpp.32E6E2FE461CC1DE.idx  ProjectMWrapper.hpp.FD05E9296918E50F.idx  PulseAudioSource.cpp.BD6B70ACDBA613D1.idx  PulseAudioSource.hpp.EFFF8863BFDF81A9.idx  SilentAudioSource.cpp.CB4FA9C2BC39A3E5.idx  SilentAudioSource.hpp.3D9EAF8CB1122D8D.idx  VisualizerWidget.cpp.80760A4820770170.idx  VisualizerWidget.hpp.362DAE3865E2C5BC.idx  main.cpp.FFD11C66A9D19ED2.idx  test_main.cpp.10BDC355BCFC9494.idx
projectm-qt-visualizer/docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CODING_STANDARDS.md  PROJECTM_V4_API_NOTES.md
projectm-qt-visualizer/docs/decisions/: 001_qt6_over_qt5.md  002_projectm_v4_c_api.md  template_adr.md
projectm-qt-visualizer/docs/research/: opengl_pipeline_notes.md  projectm_github_findings.md  reference_implementations.md
projectm-qt-visualizer/docs/troubleshooting/: audio_issues.md  common_build_errors.md  opengl_debugging.md
projectm-qt-visualizer/resources/: resources.qrc
projectm-qt-visualizer/resources/themes/: dark.qss  light.qss
projectm-qt-visualizer/scripts/: build.sh  build_clean.sh  build_debug.sh  build_release.sh  check_deps.sh  run_app.sh  run_tests.sh
projectm-qt-visualizer/scripts/git/: commit_safe.sh  create_pr.sh
projectm-qt-visualizer/scripts/utils/: backup_file.sh  dump_webpage.sh  search_projectm_repos.sh
projectm-qt-visualizer/src/: CMakeLists.txt  main.cpp
projectm-qt-visualizer/src/app/: Application.cpp  Application.hpp  ApplicationConfig.cpp  ApplicationConfig.hpp  CMakeLists.txt  CommandLineParser.hpp
projectm-qt-visualizer/src/audio/: AudioEngine.cpp  AudioEngine.hpp  AudioFileReader.cpp  AudioFileReader.hpp  CMakeLists.txt  PCMConverter.hpp  SilentAudioSource.cpp  SilentAudioSource.hpp
projectm-qt-visualizer/src/core/: CMakeLists.txt  Logger.cpp
projectm-qt-visualizer/src/core/interfaces/: IAudioSource.hpp  IPresetManager.hpp  IVisualizer.hpp
projectm-qt-visualizer/src/core/types/: AudioBuffer.hpp  AudioFormat.hpp  VisualizerState.hpp
projectm-qt-visualizer/src/core/utils/: Logger.cpp  Logger.hpp  Result.hpp  ScopedTimer.hpp
projectm-qt-visualizer/src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  StatusBar.cpp  StatusBar.hpp  VisualizerWidget.cpp  VisualizerWidget.hpp
projectm-qt-visualizer/src/gui/dialogs/: AboutDialog.cpp  AboutDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
projectm-qt-visualizer/src/gui/widgets/: AudioControls.cpp  AudioControls.hpp  PresetBrowser.cpp  PresetBrowser.hpp
projectm-qt-visualizer/src/platform/: CMakeLists.txt  OpenGLHelpers.hpp
projectm-qt-visualizer/src/platform/linux/: PulseAudioSource.cpp  PulseAudioSource.hpp
projectm-qt-visualizer/src/projectm/: CMakeLists.txt  PCMDataHandler.hpp  PresetLoader.cpp  PresetLoader.hpp  ProjectMConfig.cpp  ProjectMConfig.hpp  ProjectMWrapper.cpp  ProjectMWrapper.hpp  RenderPipeline.cpp  RenderPipeline.hpp
projectm-qt-visualizer/src/ui/: MainWindow.cpp
projectm-qt-visualizer/src/visualizer/: ProjectMBridge.cpp  VisualizerWindow.cpp  VisualizerWindow.hpp
projectm-qt-visualizer/tests/integration/: CMakeLists.txt
projectm-qt-visualizer/tests/unit/: CMakeLists.txt  test_main.cpp
projectm-qt-visualizer/tests/unit/audio/: test_SilentAudioSource.cpp
projectm-qt-visualizer/tests/unit/core/: test_AudioBuffer.cpp
resources/: chadvis-projectm-qt.desktop  chadvis-projectm-qt.qrc
scripts/: install_projectm_v4_local.sh  run_debug.sh  setup-arch.sh
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.hpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Logger.hpp
src/overlay/: OverlayConfig.cpp  OverlayEngine.cpp  OverlayEngine.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  TextAnimator.cpp  TextAnimator.hpp  TextElement.cpp  TextElement.hpp
src/recorder/: EncoderSettings.cpp  EncoderSettings.hpp  FFmpegUtils.hpp  FrameGrabber.cpp  FrameGrabber.hpp  VideoRecorder.cpp  VideoRecorder.hpp
src/suno/: SunoClient.cpp  SunoClient.hpp  SunoModels.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp  MarqueeLabel.cpp  MarqueeLabel.hpp  PlayerControls.cpp  PlayerControls.hpp  PresetBrowser.cpp  PresetBrowser.hpp  RecordingControls.cpp  SettingsDialog.cpp  SettingsDialog.hpp  SunoBrowser.cpp  SunoBrowser.hpp  VisualizerPanel.cpp  VisualizerPanel.hpp
src/ui/controllers/: AudioController.cpp  AudioController.hpp  RecordingController.cpp  RecordingController.hpp  SunoController.cpp  SunoController.hpp  VisualizerController.cpp  VisualizerController.hpp
src/util/: FileUtils.cpp  FileUtils.hpp  Result.hpp  Signal.hpp  Types.hpp
src/visualizer/: PresetManager.cpp  PresetManager.hpp  ProjectMBridge.cpp  ProjectMBridge.hpp  RatingManager.cpp  RatingManager.hpp  RenderTarget.cpp  VisualizerWindow.cpp  VisualizerWindow.hpp
tests/: CMakeLists.txt
tests/integration/: test_projectm_render.cpp
tests/manual/: TEST_GUI_LAUNCH.md
tests/unit/core/: test_Logger.cpp
tests/unit/projectm/: test_ProjectMWrapper.cpp
